--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#drum-machine {
+  background-color: #03121C;
+  color: rgb(224, 224, 224);
+  max-width: 550px;
+  padding: 20px;
+  border-radius: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+h1 {
+  margin: 50px;
+}
+
+#pad-container {
+  width: 300px;
+  display: grid;
+  grid-template-columns: 90px 90px 90px;
+  grid-gap: 10px;
+  justify-items: center;
+  align-items: center;
+}
+
+.drum-pad {
+  background-color: #900C3F;
+  padding: 40px;
+  width: 100%;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.drum-pad:hover {
+  background-color: #C70039 ;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#display {
+  width: 200px;
+  text-align: center;
+  background-color: #37102b;
+  height: 50px;
+  margin: auto;
+  padding-top: 12px;
+  border-radius: 5px;
+  color: white;
 }
